# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  author
include/: args.h  cmp.h  error.h  file.h  ft_ls.h  init.h  item.h  options.h  output.h  parse.h  print.h  print_files.h  process.h  sorting.h
src/: cmp.c  error.c  init.c  long_output_utils.c  main.c  open_folder.c  output.c  output_file_mode.c  output_time.c  output_utils.c  parse.c  parse_args.c  print.c  print_files.c  process.c  process_absent.c  process_dir_recursive.c  process_files.c  process_files_utils.c  process_long.c  process_present.c  process_recursive.c  sort_extra_options.c  sort_files.c
